# mkdr

./: CheckList.md  Hello.yml  Ob.py  README.md  TODO.md  build.sh  color.py  config.yml  metadata.yml  mkdr-config.yml  mkdr.py  mkdrcompose.yml  organization.yml  pyproject.toml  save.yml
mkdr/: mkdr.py
src/: beak.py  check.py  main.py  mkdr.py  util.py
src/mode/: compose.py  delete.py  export.py  reorg.py
test/: checklist.yml  mkdrcompose.yml  test.py  test_handler.py
test/beakfile/: log  test.sh
test/beakfile/check/: out-compose  out-delete  out-diff  out-tree
test/compose/: log  test.sh
test/compose/check/: out-compose
test/delete/: index.html  log  mkdrcompose.yml  test.sh
test/delete/check/: out-delete  out-ls
test/export/: compose.yml  log  test.sh
test/export/check/: out-export
test/invalid-beakfile/: test.sh
test/invalid-beakfile/check/: out-error
test/reorg/: mkdrcompose.yml  test.sh
test/reorg-abort/: log  mkdrcompose.yml  test.sh
test/reorg-abort/check/: out-reorg-abort
test/reorg-nothing-changed/: log  mkdrcompose.yml  test.sh
test/reorg-nothing-changed/check/: out-reorg  out-tree
test/reorg/check/: out-tree
test/superuser/: log  test.sh
test/superuser/check/: out-sudo
