[tool.poetry]
name = "mkdr"
version = "0.1.0"
description = "DSaC (Directory Structure as Code) tool"
authors = ["Kanta Kurzumi <krzmknt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.5.1"
pylint = "^2.17.6"
black = "^23.9.1"
pyright = "^1.1.328"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
